Delivery statistics extended with commit-counts and commit-count-since-last-dlq. These statistics are accessible from an inbound message wrapper.
svn path=/trunk/; revision=202